--- a/WEB/css/style-faq.css
+++ b/WEB/css/style-faq.css
@@ -1,20 +1,24 @@
 .container-fluid{
-	margin-top: 5em;
-	font-family: 'Cormorant Upright', serif;
+	margin-top: 4em;
+	font-family: 'Arsenal', sans-serif;
+	padding: 20px;
+	background: #7f4e9f;
 }
 
-.main-question{
-	color: #FFA028;
-}
-.main-question i{
-	color: #FFA028;
-}
-
-.main-answer{
-	font-size: 23px;
-	color: #606060;
+.ques{
+	background: #F6F4F5;
+	font-size: 18px;
+	height:  30em;
+	overflow-y: auto;
+	border-radius: 15px;
 }
 
-.sidebar-ques{
-	font-size: 19px;
+.ans{
+	background: #E7E7E7;
+	color: black;
+	font-size: 22px;
+	padding: 25px;
+	border-radius: 15px;
+	height: 25em;
+	overflow-y: auto;
 }
