--- a/WEB/css/style-gioi-thieu.css
+++ b/WEB/css/style-gioi-thieu.css
@@ -2,7 +2,7 @@
 
 .main-contain{
 	margin-top: 4.5em;
-	background: #50297a;
+	background: #009BFF;
 	color: white;
 	font-family: 'Playfair Display', serif;
 }
