--- a/WEB/css/style-all-post.css
+++ b/WEB/css/style-all-post.css
@@ -21,12 +21,13 @@ body{
 }
 
 .profile .username{
-	color: #FD00A5;
+	color: #EB00F0;
 	text-align: center;
+	font-weight: bolder;
 }
 
 .profile i{
-	color: #197BFF;
+	color: #016DFF;
 }
 
 .profile ul li{
@@ -34,7 +35,10 @@ body{
 }
 
 .news i{
-	color: #FF00C6;
+	color: #FF0258;
+}
+.news a{
+	text-decoration: none;
 }
 
 .media img{
