--- a/WEB/css/style_forget_password.css
+++ b/WEB/css/style_forget_password.css
@@ -1,7 +1,7 @@
 /* CSS Document */
 
 body{
-	background: url(../Images/logon/Love_Heart_on_Beach_HD_Photo_Background.jpg);
+	background: url(../Images/logon/Mello.jpg);
 	font-family: 'Cormorant Infant', serif;
 }
 
@@ -10,7 +10,7 @@ body{
 	width: 30%;
 	height: 40em;
 	margin: auto;
-	background: rgba(255,22,210,0.59);
+	background: rgba(0,163,255,0.61);
 	margin-top: 6%;
 	margin-bottom: 3em;
 }
@@ -34,12 +34,14 @@ body{
 	width: 100%;
 	padding: 0.5em;
 	border-radius: 1em;
-	border: #E31DF7 solid 0.1em;
+	border: #1C94F7 solid 0.1em;
 	margin-bottom: 2em;
+	background: rgba(255,255,255,0.87);
+	color: black;
 }
 
 #forget-password #form-forget-password input:hover{
-	border: #F9FF2C solid 0.1em;
+	border: #FFFFFF solid 0.1em;
 }
 
 
