Chỉnh sửa phần đăng nhập cho admin
Đăng nhập sẽ có phân quyền và kết xuất dữ liêu theo chuẩn

--- a/WEB/css/style-admin-finance.css
+++ b/WEB/css/style-admin-finance.css
@@ -1,8 +1,8 @@
 .navbar {
-  background-color: #ff9800;
+  background-color: #ff9800 !important;
 }
 .navbar .navbar-brand {
-  color: #ffffff;
+  color: #ffffff !important;
 }
 .navbar .navbar-brand:hover,
 .navbar .navbar-brand:focus {
