--- a/WEB/css/style-report.css
+++ b/WEB/css/style-report.css
@@ -63,8 +63,8 @@
         }
 
         /* Reoport tablesorter */
-        
-         /* table thead tr th, table tfoot tr th {
+
+        /* table thead tr th, table tfoot tr th {
             background-color: #e6EEEE;
             border: 1px solid #FFF;
             padding: 4px;
@@ -103,23 +103,28 @@
             border: 1px solid #FFF;
             padding: 4px;
         }
+
         table thead tr .header {
-            cursor: pointer; 
-            font-weight: bold; 
-            padding-left: 20px; 
-            border-right: 1px solid #dad9c7; 
-            margin-left: -5px; 
+            cursor: pointer;
+            font-weight: bold;
+            padding-left: 20px;
+            border-right: 1px solid #dad9c7;
+            margin-left: -5px;
         }
+
         table tbody td {
             color: #3D3D3D;
             padding: 4px;
             background-color: #FFF;
             vertical-align: top;
         }
-        table tbody tr.odd td {
-            background-color:#F0F0F6;
 
+        table tbody tr.odd td {
+            background-color: #F0F0F6;
         }
+
         tr.selected td {
-            background-color: #B0BED9 !important; /* Add !important to make sure override datables base styles */
-         }
+            background-color: #B0BED9 !important;
+            /* Add !important to make sure override datables base styles */
+        }
+
