Tiếp tục chỉnh sửa admin phần load dữ liệu

--- a/WEB/css/style-admin-advertisemnt.css
+++ b/WEB/css/style-admin-advertisemnt.css
@@ -1,22 +1,22 @@
 .navbar {
-  background-color: #ff9800;
+  background-color: #c536ff;
 }
 .navbar .navbar-brand {
   color: #ffffff;
 }
 .navbar .navbar-brand:hover,
 .navbar .navbar-brand:focus {
-  color: #fefefe;
+  color: #ffffff;
 }
 .navbar .navbar-text {
   color: #ffffff;
 }
 .navbar .navbar-text a {
-  color: #fefefe;
+  color: #ffffff;
 }
 .navbar .navbar-text a:hover,
 .navbar .navbar-text a:focus {
-  color: #fefefe; 
+  color: #ffffff; 
 }
 .navbar .navbar-nav .nav-link {
   color: #ffffff;
@@ -25,7 +25,7 @@
 }
 .navbar .navbar-nav .nav-link:not(.disabled):hover,
 .navbar .navbar-nav .nav-link:not(.disabled):focus {
-  color: #fefefe;
+  color: #ffffff;
 }
 .navbar .navbar-nav .nav-item.active .nav-link,
 .navbar .navbar-nav .nav-item.active .nav-link:hover,
@@ -33,15 +33,15 @@
 .navbar .navbar-nav .nav-item.show .nav-link,
 .navbar .navbar-nav .nav-item.show .nav-link:hover,
 .navbar .navbar-nav .nav-item.show .nav-link:focus {
-  color: #fefefe;
-  background-color: #ffd000;
+  color: #ffffff;
+  background-color: #553cff;
 }
 .navbar .navbar-toggle {
-  border-color: #ffd000;
+  border-color: #553cff;
 }
 .navbar .navbar-toggle:hover,
 .navbar .navbar-toggle:focus {
-  background-color: #ffd000;
+  background-color: #553cff;
 }
 .navbar .navbar-toggle .navbar-toggler-icon {
   color: #ffffff;
@@ -54,7 +54,7 @@
   color: #ffffff;
 }
 .navbar .navbar-link:hover {
-  color: #fefefe;
+  color: #ffffff;
 }
 
 @media (max-width: 575px) {
@@ -63,11 +63,11 @@
   }
   .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:hover,
   .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-    color: #fefefe;
+    color: #ffffff;
   }
   .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item.active {
-    color: #fefefe;
-    background-color: #ffd000;
+    color: #ffffff;
+    background-color: #553cff;
   }
 }
 
@@ -77,11 +77,11 @@
   }
   .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:hover,
   .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-    color: #fefefe;
+    color: #ffffff;
   }
   .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item.active {
-    color: #fefefe;
-    background-color: #ffd000;
+    color: #ffffff;
+    background-color: #553cff;
   }
 }
 
@@ -91,11 +91,11 @@
   }
   .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:hover,
   .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-    color: #fefefe;
+    color: #ffffff;
   }
   .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item.active {
-    color: #fefefe;
-    background-color: #ffd000;
+    color: #ffffff;
+    background-color: #553cff;
   }
 }
 
@@ -105,11 +105,11 @@
   }
   .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
   .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-    color: #fefefe;
+    color: #ffffff;
   }
   .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item.active {
-    color: #fefefe;
-    background-color: #ffd000;
+    color: #ffffff;
+    background-color: #553cff;
   }
 }
 
@@ -118,20 +118,22 @@
 }
 .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:hover,
 .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-  color: #fefefe;
+  color: #ffffff;
 }
 .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item.active {
-  color: #fefefe;
-  background-color: #ffd000;
+  color: #ffffff;
+  background-color: #553cff;
 }
 
-#sidebar{
-	background: #FFAE00;
+
+#sidebar, .card-header{
+	background: #BD32FA;
 	color: white;
 }
 
-#checkcard{
-	background: #FFAE00;
+
+.card .card-body .adverbtn{
+	background-color: #9922FF;
 	color: white;
 }
 
