Cap nhat giao dien productd-detail, all-post va user-page

--- a/WEB/css/style-all-post.css
+++ b/WEB/css/style-all-post.css
@@ -1,6 +1,7 @@
 /* CSS Document */
-body{
-	background: #E9E9E9;
+
+#mainlarge{
+	background: url(../Images/logon/SublimeVivid.jpg);
 	font-family: 'Arima Madurai', cursive;
 }
 .main{
@@ -9,33 +10,67 @@ body{
 
 .main .profile{
 	margin-top: 1em;
+	background: rgba(255,255,255,0.00);
 }
 
 .main .profile img{
 	border-radius: 50%;
 	border: 1px solid #C9C9C9;
 }
-
+.btn-type-purple{
+	background: rgba(200,0,255,1.00);
+	color: white;
+}
+.btn-type-purple:hover{
+	background: rgba(218,85,255,1.00);
+}
+.btn-type-pink{
+	background: rgba(255,0,229,1.00);
+	color: white;
+}
+.btn-type-pink:hover{
+	background: rgba(255,85,237,1.00);
+}
 .profile .card{
 	padding: 0.5em;
+	background: rgba(255,255,255,0.45);
 }
 
 .profile .username{
-	color: #EB00F0;
+	color: white;
 	text-align: center;
 	font-weight: bolder;
 }
 
 .profile i{
-	color: #016DFF;
+	color: white;
 }
 
 .profile ul li{
-	color: black;
+	color: rgba(119,119,119,1.00);
 }
-
+.profile .card .list-group li{
+	background: rgba(255,255,255,0.46);
+	color: rgba(119,119,119,1.00);
+}
+.profile .card .list-group li textarea{
+	background: rgba(255,255,255,0.62);
+	color: rgba(136,136,136,1.00);
+}
+.news .rounded h6{
+	color: white;
+}
+.news,.news .rounded,.news .rounded .media ,.news .rounded .media{
+	background: rgba(255,255,255,0.00);
+}
+.news .rounded{
+	background: rgba(255,255,255,0.72);
+}
+.news .rounded .media p strong span{
+	color: rgba(136,136,136,1.00);
+}
 .news i{
-	color: #FF0258;
+	color: white;
 }
 .news a{
 	text-decoration: none;
