--- a/WEB/css/style-danh-muc.css
+++ b/WEB/css/style-danh-muc.css
@@ -204,12 +204,18 @@ body{
 	.product .card-product{
 		margin-left: 50px;
 	}
+	.main-contain{
+		margin-top: 7em;
+	}
 }
 
 @media only screen and (max-width: 960px){
 	
 	.product .card-product{
 		margin-left: 20px;
+	}
+	.main-contain{
+		margin-top: 7em;
 	}
 }
 
