--- a/WEB/css/style-promotion.css
+++ b/WEB/css/style-promotion.css
@@ -1,4 +1,3 @@
-/* CSS Document */
 .container-fluid{
 	margin: 0;
 	padding: 0;
@@ -7,8 +6,54 @@
 	margin-top: 4.5em;
 }
 
+.sectionmain .container p{
+	color: white;
+	font-size: 30px;
+	text-align: center;
+	margin-top: 40px;
+	font-weight: bold;	
+}
+
 #carouselExampleFade .carousel-inner .carousel-item img{
 	width: 100%;
 	height: 35em;
 	background-size: cover;	
 }
+.btn-purple{
+	background: #d04ed6;
+	color: white;
+}
+.btn-purple:hover{
+	background: #C42FCB;
+	color: white;
+}
+.promotion-item{
+	width: 400px;
+	height: 400px;
+}
+.sectionmain{
+	background: url(../Images/logon/Cosmic-Fusion.jpg);
+	font-family: 'Playfair Display', serif;
+	margin-top: 4.9em;
+}
+.detail{
+	color: black;
+	padding: 20px;
+}
+
+.tieude1{
+	font-size: 18px;
+	font-weight: bold;
+	margin-left: 2px;
+}
+.details{
+	margin-top: 20px;
+}
+
+.details  .col-md-8{
+	margin-top: 3px;
+}
+
+
+
+
