Chỉnh sửa giao diện trang báo cáo
Co-Authored-By: anhtuankg1997 <anhtuankg1997@users.noreply.github.com>

--- a/WEB/css/style-report.css
+++ b/WEB/css/style-report.css
@@ -57,7 +57,7 @@
             height: auto;
             display: inline-block;
             width: 100%;
-            overflow-y: auto;
+            overflow-y: hidden;
             overflow-x: hidden;
         }
 
