project báo cáo(beta2)

--- a/WEB/css/style-report.css
+++ b/WEB/css/style-report.css
@@ -46,7 +46,7 @@
         }
 
         tbody {
-            height: 300px;
+            max-height: 1000px;
             display: inline-block;
             width: 100%;
             overflow-y: auto;
