Thêm mô tả cho các trang + respondsive cho trang giới thiệu, chi tiết sp, all-post. chỉnh sửa sidebar trang category

--- a/WEB/css/style-contact-us.css
+++ b/WEB/css/style-contact-us.css
@@ -1,7 +1,7 @@
 /* CSS Document */
 .main{
 	font-family: 'Arsenal', sans-serif;
-	height: 47em;
+	height: auto;
 	color: black;
 	background: url(../Images/logon/JShine.jpg);
 	background-size: cover;
