--- a/WEB/css/style-product-detail.css
+++ b/WEB/css/style-product-detail.css
@@ -34,7 +34,7 @@ img {
 }
 
 .preview {
-	height: 45em;
+	height: 49em;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -102,7 +102,7 @@ img {
 
 .details {
   background: rgba(255,255,255,0.00) ;
-  height: 45em;
+  height: 49em;
   overflow-y: auto;
   display: -webkit-box;
   display: -webkit-flex;
@@ -130,7 +130,6 @@ img {
 .detaildes{
 	color: white;
 	margin-top: 10px;
-	margin-bottom: 20px;
 	background: rgba(255,255,255,0.00);
 	box-shadow: 
 		  inset 7px 7px 12px #000000, 
@@ -152,7 +151,7 @@ img {
 #price{
 	color: #FFFFFF;
 	font-weight: bolder;
-	font-size: 25px;
+	font-size: 20px;
 }
 
 #diproduct{
@@ -208,21 +207,23 @@ img {
 
 .tamsubg{
 	width: 100%;
-	height: 40em;
+	height: 43em;
 	background: url(../Images/Promotion/pexels-photo-412295.jpeg);
 		box-shadow: 
 		  inset 5px 5px 10px #000000, 
 		  inset -5px -5px 10px rgba(0,144,236,1.00);
+	background-position: center;
+	background-size: cover;
 }
 
 .tamsu{
 	width: 100%;
-	height: 40em;
+	height: 43em;
 	background: rgba(96,44,142,0.39);
 }
 
 .tamsu textarea:disabled{
-	height: 32em;
+	height: 36em;
 	resize: none;
 	background: transparent;
 	color: white;
@@ -275,3 +276,39 @@ img {
 	font-weight: bold; 
 	font-size: 20px;
 }
+
+
+
+/* Dành cho điện thoại */
+@media all and (max-width: 480px) {
+	.page,.page .container-fluid,.page .container-fluid .container-fluid{
+		margin: 0 !important; 
+		padding: 0 !important; 
+	}
+	
+	
+	.detaildes{
+		width: 100vh;
+		
+	}
+	
+	#slogan{
+		font-size: 18px;
+	}
+	
+	#tieude{
+		margin-top: 4em;
+	}
+	
+	.tamsubg,.tamsu{
+		max-height: 40em;
+	}
+
+	.tamsu textarea:disabled{
+	font-size: 17px;
+
+}
+}
+
+
+
